--- a/cliente/templates/registro.html
+++ b/cliente/templates/registro.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
     <div class="row">
-        <form class="col l4 m6 s12 offset-l4 offset-m3">
+        <form class="col l4 m6 s12 offset-l4 offset-m3" action="/cliente/registro" method="post">
+            {% csrf_token %}
+            {{ user_form }}
+            {{ profile_form }}
+            <input type="submit" value="Aceptar" />
+{% comment %}
             <div class="row">
                 <div class="input-field inline col s12">
                     <input id="name" type="text" class="validate">
@@ -30,6 +35,7 @@
                     <i class="material-icons right">send</i>
                 </button>
             </div>
+{% endcomment %}
         </form>
     </div>
 {% endblock %}
