Fixing invitations template

--- a/cliente/templates/invitaciones.html
+++ b/cliente/templates/invitaciones.html
@@ -10,38 +10,38 @@
             <table class="responsive-table striped sortable">
                 <thead>
                     <tr>
+                        <th>Docente</th>
+                        <th>Email</th>
                         <th>Universidad</th>
                         <th>Programa</th>
                         <th>Curso</th>
-                        <th>Docente</th>
                         <th>Ciudad</th>
-                        <th>Porcentaje de Avance</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
+                        <td>Jocelyn Simmonds</td>
+                        <td>jsimmonds@dcc.uchile.cl</td>
                         <td>Universidad de Chile</td>
                         <td>Ingeniería Civil en Computación</td>
                         <td>Ingeniería de Software 1</td>
-                        <td>Jocelyn Simmonds</td>
                         <td>Santiago</td>
-                        <td>10%</td>
                     </tr>
                     <tr>
+                        <td>Sergio Ochoa</td>
+                        <td>sochoa@dcc.uchile.cl</td>
                         <td>Universidad de Chile</td>
                         <td>Ingeniería Civil en Computación</td>
                         <td>Ingeniería de Software 2</td>
-                        <td>Sergio Ochoa</td>
                         <td>Santiago</td>
-                        <td>0%</td>
                     </tr>
                     <tr>
+                        <td>Cecilia Bastarrica</td>
+                        <td>cbastarrica@dcc.uchile.cl</td>
                         <td>Universidad de Chile</td>
                         <td>Ingeniería Civil en Computación</td>
                         <td>Proyecto de Software</td>
-                        <td>Cecilia Bastarrica</td>
                         <td>Santiago</td>
-                        <td>70%</td>
                     </tr>
                 </tbody>
             </table>
